# httprs

./: .gitignore  404.html  CHANGELOG.md  Cargo.toml  LICENSE  README.md  benchmark.py  benchmarks.py  bump.py  check_ecosystem.py  ecosystem_conftest.py  httpx_compat.py  index.html  justfile  mkdocs.yml  pyproject.toml  sitemap.xml
.cargo/: config.toml
.github/workflows/: benchmark.yml  ci.yml  docs.yml  ecosystem.yml  release.yml
architecture/: index.html
development/: index.html
docs/: architecture.md  development.md  index.md  release.md  usage.md
python/httprs/: __init__.py
release/: index.html
search/: search_index.json
src/: auth.rs  client.rs  config.rs  cookies.rs  json.rs  lib.rs  models.rs  proxy.rs  query_params.rs  transports.rs
tests/: conftest.py  test_api.py  test_async_client.py  test_auth.py  test_client.py  test_config.py  test_exceptions.py  test_models.py  test_security.py  test_transports.py
tests/input/: large.csv  large.json  small.csv  small.json
usage/: index.html
