[package]
name = "httprs"
version = "0.0.1-alpha.8"
edition = "2021"
description = "An experimental HTTP library for Python built with Rust"
license = "MIT"
repository = "https://github.com/cnpryer/httprs"
readme = "README.md"
keywords = ["http", "client", "python", "pyo3", "async"]
categories = ["web-programming::http-client", "api-bindings"]
exclude = ["/tests", "/examples", ".github"]

[lib]
name = "httprs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28.2", features = ["extension-module", "abi3-py312", "generate-import-lib"] }
pyo3-async-runtimes = { version = "0.28.0", features = ["tokio-runtime"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "cookies", "gzip", "deflate", "rustls-tls", "charset", "http2"] }
tokio = { version = "1", features = ["full"] }
url = "2"
serde_json = { version = "1", features = ["preserve_order"] }
base64 = "0.22"
md-5 = "0.10"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"

[profile.release]
lto = true
codegen-units = 1
